--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>It is also important to remember that since control flow dictates that JavaScript
+           files are executed from top to bottom, order matters.</li>
         </ul>
       </section>
     </main>
